# Agentic-MIKE-Plus

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: mcp.sample.json
docs/: verification.md
examples/sirius_rtc/: README.md
mikeplus_mcp/: __init__.py  _types.py  registry.py  server.py
mikeplus_mcp/contracts/: __init__.py  plot_style.py  schema.py  units.py
mikeplus_mcp/runtime/: __init__.py  engine_log.py  worker.py
mikeplus_mcp/tools/: __init__.py  model.py  params.py  plot.py  results.py  run.py
mikeplus_mcp/workers/: __init__.py  model_worker.py  params_worker.py  plot_worker.py  results_worker.py  run_worker.py
scripts/: call_tool.py  install.ps1  locate_mike.py  make_workflow_fig.py  smoke_test.py
skills/mike-model/: SKILL.md
skills/mike-params/: SKILL.md
skills/mike-plot/: SKILL.md
skills/mike-results/: SKILL.md
skills/mike-runner/: SKILL.md
tests/: test_engine_log.py  test_registry.py  test_schema.py  test_server.py  test_units.py
