[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mikeplus-mcp"
version = "0.1.0"
description = "MCP server + skills to drive MIKE+ headless (run / read results / plot) via natural language"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "mcp>=1.28",
  "mikeplus==2026.0.0",
  "mikeio>=3.1",
  "mikeio1d>=1.2",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "shapely>=2.0",
]

[project.scripts]
mike-plus-mcp = "mikeplus_mcp.server:run"

[tool.setuptools.packages.find]
include = ["mikeplus_mcp*"]
